--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2469,6 +2469,10 @@ textarea,
     background-color: var(--N50);
 }
 
+.bc-b50 {
+    background-color: var(--B50);
+}
+
 .c-n50 {
     color: var(--N50);
 }
@@ -4118,7 +4122,7 @@ textarea::placeholder {
 
 .bulk-selection-widget {
     border: 1px solid var(--B500);
-    background: rgba(240, 247, 255, 0.80);
+    background: var(--light-blue);
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.35);
     backdrop-filter: blur(5px);
 }
