--- a/src/css/colorPalette.scss
+++ b/src/css/colorPalette.scss
@@ -10,7 +10,7 @@
     --B300: #72ace6;
     --B200: #abcff3;
     --B100: #e5f2ff;
-    --B50: #F0F7FF;
+    --B50: #f0f7ff;
     --N900: #000a14;
     --N800: #1d2730;
     --N700: #3b444c;
@@ -58,5 +58,4 @@
     --tippy-card-black-bg: #2d3452;
     --terminal-bg: #0b0f22;
     --inprogress-orange: #ff7e5b;
-    --light-blue: #f0f7ff;
 }
