feat: add B50 to color palette

--- a/src/components/charts/list/list.scss
+++ b/src/components/charts/list/list.scss
@@ -323,7 +323,7 @@
     grid-template-columns: 20px 1fr;
     grid-column-gap: 12px;
     border: solid 1px var(--B200);
-    background: #f0f7ff;
+    background: var(--B50);
     border-radius: 4px;
     margin-bottom: 16px;
 
