--- a/src/components/deploymentGroups/BulkActions.scss
+++ b/src/components/deploymentGroups/BulkActions.scss
@@ -24,7 +24,7 @@
             .warning {
                 padding: 16px;
                 border: solid 1px var(--B200);
-                background-color: #f0f7ff;
+                background-color: var(--B50);
                 border-radius: 4px;
                 margin-bottom: 16px;
                 svg {
