--- a/src/components/hostURL/hosturl.scss
+++ b/src/components/hostURL/hosturl.scss
@@ -3,7 +3,7 @@
     padding: 16px;
     border-radius: 4px;
     border: solid 1px var(--B200);
-    background-color: #f0f7ff;
+    background-color: var(--B50);
     font-size: 14px;
 }
 
