--- a/src/css/colorPalette.scss
+++ b/src/css/colorPalette.scss
@@ -10,6 +10,7 @@
     --B300: #72ace6;
     --B200: #abcff3;
     --B100: #e5f2ff;
+    --B50: #f0f7ff;
     --N900: #000a14;
     --N800: #1d2730;
     --N700: #3b444c;
