--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4158,9 +4158,9 @@ textarea::placeholder {
 
 .bulk-selection-widget {
     border: 1px solid var(--B500);
-    background: var(--B50);
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.35);
-    backdrop-filter: blur(5px);
+    background: rgba(240, 247, 255, 0.72);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.20);
+    backdrop-filter: blur(4px);
 }
 
 // Tab behaviors
