--- a/src/components/gitOps/gitops.scss
+++ b/src/components/gitOps/gitops.scss
@@ -24,6 +24,15 @@
 		color: var(--B500);
 	}
 }
+
 .stroke_width {
 	stroke-width: 2px;
+}
+
+.form__radio-item {
+	&.disabled {
+		background-color: var(--N0);
+		opacity: 0.5;
+
+	}
 }
