feat: add bulk user status update and delete for all across pages

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4113,7 +4113,7 @@ textarea::placeholder {
 
 .bulk-selection-widget {
     border: 1px solid var(--B500);
-    background: rgba(var(--B50), 0.47);
+    background: rgba(240, 247, 255, 0.72);
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.35);
     backdrop-filter: blur(4px);
 }
