fix: update bulk icon, fix type issue, add tilde icon

--- a/src/css/forms.scss
+++ b/src/css/forms.scss
@@ -316,7 +316,7 @@ p.sentence-case:first-letter {
 
 // TODO: update the icon
 .form__checkbox:checked[value='BULK_CHECKED']~.form__checkbox-container {
-    background-image: url('../assets/icons/ic-charts.svg');
+    background-image: url('../assets/icons/ic-bulk-check.svg');
 }
 
 .any-selected {
