--- a/src/components/app/details/appDetails/appDetails.scss
+++ b/src/components/app/details/appDetails/appDetails.scss
@@ -1794,11 +1794,9 @@ table.resource-tree {
 
 .source-info-container,
 .app-details-info-card {
-    .dc__app-summary__icon {
-        &.healthy {
-            background-size: contain, contain;
-            background: url(../../../../assets/icons/appstatus/ic-heart-green.svg), transparent;
-        }
+    .healthy {
+        background-size: contain, contain;
+        background: url(../../../../assets/icons/appstatus/ic-heart-green.svg), transparent;
     }
 
     .mw-340 {
@@ -1971,6 +1969,11 @@ table.resource-tree {
     margin-right: 0;
     height: 100%;
     overflow: scroll;
+
+    .issues-listing-modal__header {
+        position: sticky;
+        top: 0
+    }
 
     &__body {
         &__head-row {
