--- a/src/components/app/list/expandedRow/expandedRow.css
+++ b/src/components/app/list/expandedRow/expandedRow.css
@@ -43,7 +43,7 @@
 }
 
 .app-list__row--expanded {
-    box-shadow: inset 0 -1px 0 0 #d1d1d1;
+    box-shadow: 1px solid var(--N100);
     background-color: var(--N50) !important;
     position: relative;
 }
