fix: update search placeholder and add tool tips

--- a/src/Pages/GlobalConfigurations/Authorization/authorization.scss
+++ b/src/Pages/GlobalConfigurations/Authorization/authorization.scss
@@ -72,12 +72,12 @@
     &__row,
     &__header {
         display: grid;
-        grid-template-columns: 40px minmax(150px, 300px) minmax(150px, auto) 52px;
+        grid-template-columns: 40px 250px minmax(150px, auto) 52px;
         column-gap: 16px;
         align-items: center;
 
         &--with-status {
-            grid-template-columns: 40px minmax(150px, 300px) 150px minmax(200px, auto) 52px;
+            grid-template-columns: 40px 250px 150px minmax(200px, auto) 52px;
         }
     }
 
