refactor: remove the loop for generating font size imp classes

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4152,6 +4152,10 @@ textarea::placeholder {
     font-size: 11px !important;
 }
 
+.fs-13-imp {
+    font-size: 13px !important;
+}
+
 // Start: accouncement banner
 .announcement-banner-container {
     &.page-header-banner {
