--- a/src/css/patternfly.scss
+++ b/src/css/patternfly.scss
@@ -1,77 +1,6 @@
 // @TODO: This file should be removed later
 /* PatternFly */
 @font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 300;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-Light-webfont.eot');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-Regular-webfont.eot');
-
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 300;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-LightItalic-webfont.eot');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 400;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-Italic-webfont.eot');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 600;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-Semibold-webfont.eot');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 600;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-SemiboldItalic-webfont.eot');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 700;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-Bold-webfont.eot');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 700;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-BoldItalic-webfont.eot');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 800;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-ExtraBoldItalic-webfont.eot');
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 800;
-    src: local('Open Sans'), url('../assets/fonts/OpenSans-ExtraBold-webfont.eot');
-}
-@font-face {
-    font-family: 'PatternFlyIcons-webfont';
-    src: url('../assets/fonts/PatternFlyIcons-webfont.eot');
-    src: url('../assets/fonts/PatternFlyIcons-webfont.eot?#iefix') format('embedded-opentype'),
-        url('../assets/fonts/PatternFlyIcons-webfont.ttf') format('truetype'),
-        url('../assets/fonts/PatternFlyIcons-webfont.woff') format('woff'),
-        url('../assets/fonts/PatternFlyIcons-webfont.svg#PatternFlyIcons-webfont') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
     font-family: 'Glyphicons Halflings';
     src: url('../assets/fonts/glyphicons-halflings-regular.eot');
     src: url('../assets/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
@@ -99,7 +28,7 @@
    */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
-    font-family: sans-serif;
+    font-family: 'Open Sans' ,sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
