fix: styling for text area

--- a/src/components/globalConfigurations/globalConfigurations.scss
+++ b/src/components/globalConfigurations/globalConfigurations.scss
@@ -75,7 +75,7 @@
 
     textarea {
         border-radius: 4px;
-        border: solid 1px #d6dbdf;
+        border: solid 1px var(--N200);
         &.form__input--error {
           border: solid 1px var(--R500);
         }
