css fixes from feedback

--- a/src/components/v2/appDetails/appDetails.scss
+++ b/src/components/v2/appDetails/appDetails.scss
@@ -24,6 +24,6 @@
     flex: 1;
 }
 
-.app-info-bg-gradient {
-    background: linear-gradient(to top, #ffffff 0, #ffffff 50px, var(--window-bg) 50px);
+.app-info-bg {
+    background: var(--window-bg);
 }
