feat: add ImagePromotionLink in workflow

--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -93,6 +93,11 @@
     transform: rotate(180deg);
 }
 
+.icon-dim-6 {
+    width: 6px;
+    height: 6px;
+}
+
 .icon-dim-8 {
     width: 8px;
     height: 8px;
