feat: add ImagePromotionRouter

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2988,6 +2988,10 @@ textarea,
     width: 885px !important;
 }
 
+.w-1024 {
+    width: 1024px;
+}
+
 // Width in percentage
 .mw-100p {
     min-width: 100%;
