--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1321,8 +1321,8 @@ button.anchor {
             }
 
             &:last-child input + .radio__item-label {
-                border-top-right-radius: 4px;
-                border-bottom-right-radius: 4px;
+                border-top-right-radius: 4px !important;
+                border-bottom-right-radius: 4px !important;
                 border: 1px solid var(--N200);
             }
         }
@@ -1387,8 +1387,8 @@ button.anchor {
             }
 
             &:last-child input + .radio__item-label {
-                border-top-right-radius: 4px;
-                border-bottom-right-radius: 4px;
+                border-top-right-radius: 4px !important;
+                border-bottom-right-radius: 4px !important;
                 border: 1px solid var(--N200);
             }
         }
@@ -4204,5 +4204,11 @@ textarea::placeholder {
     &:focus-visible {
         outline: 5px auto -webkit-focus-ring-color !important;
         outline-offset: 1px;
+    }
+}
+
+.last-child-mb-90 {
+    &:last-child {
+        margin-bottom: 90px;
     }
 }
