--- a/src/components/app/details/appConfig/appConfig.scss
+++ b/src/components/app/details/appConfig/appConfig.scss
@@ -12,38 +12,65 @@
         height: 100%;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 110px repeat(6, 32px) 54px 1fr auto;
         overflow: hidden;
-
-        &.hide-app-config-help {
-            grid-template-rows: repeat(6, 32px) 54px 1fr auto;
-
-            &.hide-external-links {
-                grid-template-rows: repeat(6, 32px) 1fr auto;
-            }
-        }
-
-        &.job-compose__side-nav {
-            grid-template-rows: 110px repeat(4, 32px) 1fr;
-
+        &.app-compose-with-no-gitops-config__nav {
+            grid-template-rows: 110px repeat(6, 32px) 54px 1fr auto;
             &.hide-app-config-help {
-                grid-template-rows: repeat(4, 32px) 1fr;
-            }
-        }
+                grid-template-rows: repeat(6, 32px) 54px 1fr auto;
 
-        &.config-protection__side-nav {
-            grid-template-rows: 110px repeat(6, 32px) 54px 32px 1fr auto;
-            
+                &.hide-external-links {
+                    grid-template-rows: repeat(6, 32px) 1fr auto;
+                }
+            }
+
+            &.job-compose__side-nav {
+                grid-template-rows: 110px repeat(4, 32px) 1fr;
+
+                &.hide-app-config-help {
+                    grid-template-rows: repeat(4, 32px) 1fr;
+                }
+            }
+
+            &.config-protection__side-nav {
+                grid-template-rows: 110px repeat(6, 32px) 54px 32px 1fr auto;
+
                 &.hide-external-links {
                     grid-template-rows: 110px repeat(6, 32px) 54px 1fr auto;
                 }
-            
+
                 &.hide-app-config-help {
                     grid-template-rows: repeat(6, 32px) 54px 32px 1fr auto;
-            
+
                     &.hide-external-links {
                         grid-template-rows: repeat(6, 32px) 54px 1fr auto;
                     }
+                }
+            }
+        }
+        &.app-compose-with-gitops-config__nav {
+            grid-template-rows: 110px repeat(7, 32px) 54px 1fr auto;
+            &.hide-app-config-help {
+                grid-template-rows: repeat(7, 32px) 54px 1fr auto;
+
+                &.hide-external-links {
+                    grid-template-rows: repeat(7, 32px) 1fr auto;
+                }
+            }
+
+            &.config-protection__side-nav {
+                grid-template-rows: 110px repeat(7, 32px) 54px 32px 1fr auto;
+
+                &.hide-external-links {
+                    grid-template-rows: 110px repeat(7, 32px) 54px 1fr auto;
+                }
+
+                &.hide-app-config-help {
+                    grid-template-rows: repeat(7, 32px) 54px 32px 1fr auto;
+
+                    &.hide-external-links {
+                        grid-template-rows: repeat(7, 32px) 54px 1fr auto;
+                    }
+                }
             }
         }
 
@@ -173,6 +200,10 @@
         margin-left: auto;
     }
 
+    .w-960 {
+        width: 960px;
+    }
+
     .environment-routes {
         width: 100%;
         margin-left: 24px;
@@ -191,7 +222,7 @@
         height: calc(100% - 48px);
         overflow: hidden;
 
-        &>.app-compose__nav-item {
+        & > .app-compose__nav-item {
             height: 40px;
             line-height: 40px;
             width: 100%;
