chore: simplify convertK8sObjectMapToOptionsList
add correct types and formattings

sanitize dangerouslySetInnerHTML in Sidebar.tsx

--- a/src/components/ResourceBrowser/ResourceBrowser.scss
+++ b/src/components/ResourceBrowser/ResourceBrowser.scss
@@ -43,7 +43,7 @@
 
                     .kind-search-select__menu-list {
                         .kind-search-select__option {
-                            mark {
+                            &--highlight {
                                 padding: 0;
                                 background-color: var(--Y200);
                             }
