--- a/src/components/ApplicationGroup/Details/TriggerView/EnvTriggerView.scss
+++ b/src/components/ApplicationGroup/Details/TriggerView/EnvTriggerView.scss
@@ -59,6 +59,11 @@
             }
         }
     }
+    .tippy-over {
+        .tippy-box {
+            top: 47px;
+        }
+    }
     .response-list-container {
         max-height: calc(100vh - 120px);
         .response-row {
