--- a/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
+++ b/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
@@ -12,13 +12,13 @@
 
         .app-deployments-info-header,
         .app-deployments-info-row {
-            grid-template-columns: minmax(170px, 28%) 15% 25% 30%;
+            grid-template-columns: minmax(170px, 28%) 15% 15% 11% 1fr;
             column-gap: 16px;
             grid-auto-rows: 36px;
             transition: grid-template-columns 0.2s ease-in-out;
 
             &.last-deployed-expanded {
-                grid-template-columns: minmax(170px, 28%) 15% 35% 20%;
+                grid-template-columns: minmax(170px, 28%) 15% 28% 11% 1fr;
             }
 
             .app-deployment-info-row-leftsection {
