--- a/src/components/app/Overview/Overview.scss
+++ b/src/components/app/Overview/Overview.scss
@@ -19,13 +19,13 @@
 
             .env-deployments-info-header,
             .env-deployments-info-row {
-                grid-template-columns: 20px 250px 200px 1fr;
+                grid-template-columns: 20px 250px 200px 110px 1fr;
                 column-gap: 16px;
                 grid-auto-rows: 36px;
                 transition: grid-template-columns 0.2s ease-out;
 
                 &.last-deployed-expanded {
-                    grid-template-columns: 20px 250px 400px 1fr;
+                    grid-template-columns: 20px 250px 400px 110px 1fr;
                 }
             }
 
@@ -49,10 +49,10 @@
             &--argo-installed {
                 .env-deployments-info-header,
                 .env-deployments-info-row {
-                    grid-template-columns: 20px 20px 250px 200px 1fr;
+                    grid-template-columns: 20px 20px 250px 200px 110px 1fr;
 
                     &.last-deployed-expanded {
-                        grid-template-columns: 20px 20px 250px 400px 1fr;
+                        grid-template-columns: 20px 20px 250px 400px 110px 1fr;
                     }
                 }
             }
