--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4163,6 +4163,10 @@ textarea::placeholder {
     font-size: 11px !important;
 }
 
+.fs-12-imp {
+    font-size: 12px !important;
+}
+
 .fs-13-imp {
     font-size: 13px !important;
 }
